src/components/Main.css
body:has(.dark-mode) {
  background-color: var(--font-color-2);
}

body {
  transition: background-color 0.4s ease;
}

main {
  display: grid;
  position: relative;
  grid-template-columns: repeat(2, 1fr);
  font-family: "Source Sans 3", sans-serif;
}

main::selection {
  background-color: var(--main-color);
  color: var(--font-color-1);
}

main > * {
  padding: var(--space-3);
}

main .form-wrapper {
  color: var(--main-color);
  display: grid;
  grid-template-columns: 1fr auto;
  height: calc(100vh - 70px);
  max-height: 100vh;
  overflow-y: auto;
  position: sticky;
  top: 70px;
  transition: transform 0.8s ease;
  will-change: contents;
}

main .cv-wrapper {
  transition: transform 0.8s ease;
  will-change: contents;
}

.form-wrapper.hide,
.cv-wrapper.expand {
  transform: translateX(calc(-100% + 31px));
  will-change: transform;
}

.form-wrapper.hide > div {
  visibility: hidden;
  will-change: auto;
}

.form-wrapper > div {
  border-right: 2px solid var(--main-color);
  overflow-y: auto;
  transition: visibility 0.8s ease;
}

.form-wrapper .drawer-btn {
  align-self: center;
  background-color: var(--main-color);
  border-radius: 0 var(--space-2) var(--space-2) 0;
  color: var(--font-color-1);
  padding: var(--space-4) var(--space-1);
  display: flex;
  justify-content: center;
}

.general-wrapper,
.educ-wrapper,
.practical-wrapper {
  padding: var(--space-3);
  display: flex;
  flex-direction: column;
  gap: var(--space-2);
}

form {
  display: flex;
  flex-direction: column;
  gap: var(--space-4);
}

button {
  padding: 0 var(--space-2);
  font-size: var(--font-md);
  font-family: "Source Sans 3", sans-serif;
  cursor: pointer;
  border: none;
  color: var(--main-color);
}

button:hover {
  color: var(--font-color-1);
  background-color: var(--main-color);
  border-radius: 2px;
}

.btn-control {
  display: flex;
  justify-content: flex-end;
  gap: var(--space-1);
}

input,
select {
  padding: 0 var(--space-1);
  font-family: "Source Sans 3", sans-serif;
  font-size: var(--font-md);
  border: none;
  border-bottom: 1px solid var(--main-color);
  color: var(--main-color);
  background-color: var(--font-color-1);
  transition: background-color 0.4s ease;
}

input:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px var(--font-color-1) inset;
  box-shadow: 0 0 0px 1000px var(--font-color-1) inset;
  -webkit-text-fill-color: var(--main-color);
  transition: all 0.4s ease;
}

.dark-mode input:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px var(--font-color-2) inset;
  box-shadow: 0 0 0px 1000px var(--font-color-2) inset;
  transition: all 0.4s ease;
}

.dark-mode input,
.dark-mode select {
  background-color: var(--font-color-2);
  transition: background-color 0.4s ease;
}

input:focus,
select:focus,
button:focus {
  outline: 1px solid var(--main-color);
  border-radius: 2px;
}

input:read-only,
select:disabled {
  border: none;
}

select:disabled {
  appearance: none;
  opacity: 1;
}

.error-message,
.required-sign {
  color: var(--error-red);
  font-size: var(--font-sm);
}

svg {
  height: calc(var(--icon-sm) - 4px);
  width: calc(var(--icon-sm) - 4px);
}

main > .toggle-mobile {
  z-index: 1;
  display: none;
}

.toggle-mobile svg {
  height: var(--icon-md);
  width: var(--icon-md);
}

.toggle-mobile svg path {
  fill: var(--main-color);
}

.toggle-mobile:hover svg path {
  fill: var(--font-color-1);
}

@media screen and (max-width: 527px) {
  :root {
    font-size: 12px;
  }
  main {
    display: block;
  }

  main .form-wrapper {
    position: static;
  }

  .form-wrapper .drawer-btn {
    display: none;
  }

  .form-wrapper > div {
    border-right-color: transparent;
    border-bottom: 2px solid var(--main-color);
  }

  .form-wrapper.hide {
    display: none;
    position: relative;
  }

  .cv-wrapper.expand {
    transform: none;
  }

  main > .toggle-mobile {
    display: flex;
    justify-content: flex-end;
  }

  main > .toggle-mobile button {
    position: fixed;
  }
}

